[package]
name = "tikv-importer"
version = "3.1.2"
authors = ["The TiKV Authors"]
description = "Tool to help ingesting large number of KV pairs into TiKV cluster"
license = "Apache-2.0"
repository = "https://github.com/tikv/importer/"
edition = "2018"
publish = false

[lib]
name = "tikv_importer"

[[bin]]
name = "tikv-importer"

[[test]]
name = "integrations"
path = "tests/integrations/import/mod.rs"

[dependencies]
clap = "2.33"
crc = "1.8"
crossbeam = "0.5"
engine = { version = "0.0.1", git = "https://github.com/tikv/tikv.git", branch = "release-3.1" }
futures = "0.1"
futures-cpupool = "0.1"
grpcio = { version = "0.5", features = [ "openssl-vendored" ] }
kvproto = { version = "0.0.1", git = "https://github.com/pingcap/kvproto.git", branch = "release-3.1" }
lazy_static = "1.3"
log_wrappers = { version = "0.0.1", git = "https://github.com/tikv/tikv.git", branch = "release-3.1" }
prometheus = { version = "0.4", default-features = false, features = ["nightly", "push", "process"] }
quick-error = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = { version = "2.4", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "91904ade" }
tikv = { version = "3.1.0-beta.1", git = "https://github.com/tikv/tikv.git", branch = "release-3.1" }
tikv_util = { version = "0.1", git = "https://github.com/tikv/tikv.git", branch = "release-3.1" }
uuid = { version = "0.6", features = [ "serde", "v4" ] }
tipb = { git = "https://github.com/pingcap/tipb.git", branch = "release-3.1" }
toml = "0.4"
cmd = { version = "0.0.1", git = "https://github.com/tikv/tikv.git", branch = "release-3.1" }

[dev-dependencies]
tempdir = "0.3"
rand = "0.6"
test_util = { version = "0.0.1", git = "https://github.com/tikv/tikv.git", branch = "release-3.1" }

# TODO: remove this when slog is compatible with the log 0.4
[replace]
"raft:0.4.3" = { git = "https://github.com/tikv/raft-rs", rev = "9782199fa6318f94bf0974129664d974b03f8f11" }

[features]
default = ['tikv/default']
tcmalloc = ['tikv/tcmalloc']
jemalloc = ['tikv/jemalloc']
portable = ['tikv/portable']
sse = ['tikv/sse']
mem-profiling = ['tikv/mem-profiling']
profiling = ['tikv/profiling']
no-fail = ['tikv/no-fail']

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
