[package]
name = "tikv-importer"
version = "4.0.12"
authors = ["The TiKV Authors"]
description = "Tool to help ingesting large number of KV pairs into TiKV cluster"
license = "Apache-2.0"
repository = "https://github.com/tikv/importer/"
edition = "2018"
publish = false

[lib]
name = "tikv_importer"

[[bin]]
name = "tikv-importer"

[[test]]
name = "integrations"
path = "tests/integrations/import/mod.rs"

[dependencies]
clap = "2.33"
cmd = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", features = ["prost-codec"] }
crc32fast = "1.2"
crossbeam = "0.7"
engine = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", default-features = false }
engine_rocks = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", default-features = false, features = ["prost-codec"] }
engine_traits = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", default-features = false }
futures = "0.1"
futures-cpupool = "0.1"
grpcio = { version = "0.5", default-features = false, features = ["openssl-vendored"] }
keys = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", default-features = false }
kvproto = { version = "0.0.2", git = "https://github.com/pingcap/kvproto.git", branch = "release-4.0", default-features = false, features = ["prost-codec"] }
lazy_static = "1.4"
log_wrappers = { version = "0.0.1", git = "https://github.com/tikv/tikv.git", branch = "release-4.0" }
pd_client = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", default-features = false }
prometheus = { version = "0.8", features = ["nightly", "push"] }
quick-error = "1.2"
raftstore = { version = "0.0.1", git = "https://github.com/tikv/tikv.git", branch = "release-4.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
tikv = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", default-features = false, features = ["prost-codec"] }
tikv_util = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", default-features = false }
security = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", default-features = false }
txn_types = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", default-features = false }
tipb = { git = "https://github.com/pingcap/tipb.git", default-features = false, features = ["prost-codec"] }
toml = "0.4"
uuid = { version = "0.7", features = [ "serde", "v4" ] }
hex = "0.3"

[dependencies.engine_rocksdb]
git = "https://github.com/tikv/rust-rocksdb.git"
package = "rocksdb"
features = ["encryption"]
branch = "tikv-4.x"

[dev-dependencies]
tempdir = "0.3"
rand = "0.7"
test_util = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", default-features = false }
raftstore = { git = "https://github.com/tikv/tikv.git", branch = "release-4.0", default-features = false }

[features]
tcmalloc = ['tikv/tcmalloc']
jemalloc = ['tikv/jemalloc', 'engine/jemalloc', 'engine_rocks/jemalloc']
portable = ['tikv/portable']
sse = ['tikv/sse']
mem-profiling = ['tikv/mem-profiling']

[patch.crates-io]
# TODO: remove this when new raft-rs is published.
raft = { git = "https://github.com/pingcap/raft-rs", branch = "0.6.x", default-features = false }
raft-proto = { git = "https://github.com/pingcap/raft-rs", branch = "0.6.x", default-features = false }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", rev = "65e9df20fbcbcf2409d5ee86a2332ecd04c534f8" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

