[package]
name = "tikv-importer"
version = "5.0.0"
authors = ["The TiKV Authors"]
description = "Tool to help ingesting large number of KV pairs into TiKV cluster"
license = "Apache-2.0"
repository = "https://github.com/tikv/importer/"
edition = "2018"
publish = false

[lib]
name = "tikv_importer"

[[bin]]
name = "tikv-importer"

[[test]]
name = "integrations"
path = "tests/integrations/import/mod.rs"

[dependencies]
clap = "2.33"
cmd = { git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false, features = ["prost-codec"] }
crc32fast = "1.2"
async-channel = "1.5"
engine_rocks = { git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false, features = ["prost-codec"] }
engine_traits = { git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false }
futures = { version = "0.3", features = ["thread-pool"] }
grpcio = { version = "0.8", default-features = false, features = ["openssl-vendored"] }
keys = { git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false }
# FIXME: create release-5.0 branch for kvproto
kvproto = { version = "0.0.2", git = "https://github.com/pingcap/kvproto.git", default-features = false, features = ["prost-codec"] }
lazy_static = "1.4"
log_wrappers = { version = "0.0.1", git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false }
pd_client = { git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false }
prometheus = { version = "0.8", features = ["nightly", "push"] }
quick-error = "1.2"
raftstore = { version = "0.0.1", git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false, features = ["prost-codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
tikv = { git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false, features = ["prost-codec", "test-engines-rocksdb"] }
tikv_util = { git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false }
security = { git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false }
txn_types = { git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false }
tipb = { git = "https://github.com/pingcap/tipb.git", default-features = false, features = ["prost-codec"] }
toml = "0.4"
uuid = { version = "0.7", features = [ "serde", "v4" ] }
hex = "0.3"
collections = { git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false }
futures-timer = "3"

# make sure this is the same as TiKV's Cargo.lock
openssl-src = "=111.10.2+1.1.1g"

[dependencies.engine_rocksdb]
git = "https://github.com/tikv/rust-rocksdb.git"
package = "rocksdb"
features = ["encryption", "static_libcpp"]
branch = "tikv-5.0"

[dev-dependencies]
tempdir = "0.3"
rand = "0.7"
test_util = { git = "https://github.com/tikv/tikv.git", branch = "release-5.0", default-features = false }

[features]
tcmalloc = ['tikv/tcmalloc']
jemalloc = ['tikv/jemalloc', 'engine_rocks/jemalloc']
portable = ['tikv/portable']
sse = ['tikv/sse']
mem-profiling = ['tikv/mem-profiling']

[patch.crates-io]
# TODO: remove this when new raft-rs is published.
raft = { git = "https://github.com/tikv/raft-rs", branch = "master", default-features = false }
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master", default-features = false }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", rev = "65e9df20fbcbcf2409d5ee86a2332ecd04c534f8" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

